language/move-lang/tests/move_check/typing/derefrence_invalid.exp
error: 

   ┌── tests/move_check/typing/derefrence_invalid.move:5:16 ───
   │
 5 │     fun t0(x: &u64, x_mut: &mut u64, s: &S, s_mut: &mut S){
   │                --- The type: 'u64'
 6 │         (*x : bool);
   │               ---- Is not compatible with: 'bool'
   │               ^^^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/derefrence_invalid.move:5:33 ───
   │
 5 │     fun t0(x: &u64, x_mut: &mut u64, s: &S, s_mut: &mut S){
   │                                 --- The type: 'u64'
 6 │         (*x : bool);
 7 │         (*x_mut: &u64);
   │                  ---- Is not compatible with: '&u64'
   │                  ^^^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/derefrence_invalid.move:5:42 ───
   │
 5 │     fun t0(x: &u64, x_mut: &mut u64, s: &S, s_mut: &mut S){
   │                                          - The type: '0x8675309::M::S'
   ·
 9 │         (*s: X);
   │              - Is not compatible with: '0x8675309::M::X'
   │              ^ Invalid type annotation
   │

error: 

    ┌── tests/move_check/typing/derefrence_invalid.move:3:19 ───
    │
  3 │     struct S { f: u64, x: X }
    │                   --- The type: 'u64'
    ·
 10 │         (*&s.f: bool);
    │                 ---- Is not compatible with: 'bool'
    │                 ^^^^ Invalid type annotation
    │

error: 

    ┌── tests/move_check/typing/derefrence_invalid.move:3:19 ───
    │
  3 │     struct S { f: u64, x: X }
    │                   --- The type: 'u64'
    ·
 11 │         (s.f: &u64);
    │               ---- Is not compatible with: '&u64'
    │               ^^^^ Invalid type annotation
    │

error: 

    ┌── tests/move_check/typing/derefrence_invalid.move:3:27 ───
    │
  3 │     struct S { f: u64, x: X }
    │                           - The type: '0x8675309::M::X'
    ·
 12 │         (*&s.x: &X);
    │                 -- Is not compatible with: '&0x8675309::M::X'
    │                 ^^ Invalid type annotation
    │

error: 

    ┌── tests/move_check/typing/derefrence_invalid.move:5:57 ───
    │
  5 │     fun t0(x: &u64, x_mut: &mut u64, s: &S, s_mut: &mut S){
    │                                                         - The type: '0x8675309::M::S'
    ·
 14 │         (*s_mut: X);
    │                  - Is not compatible with: '0x8675309::M::X'
    │                  ^ Invalid type annotation
    │

error: 

    ┌── tests/move_check/typing/derefrence_invalid.move:3:19 ───
    │
  3 │     struct S { f: u64, x: X }
    │                   --- The type: 'u64'
    ·
 15 │         (*&s_mut.f: bool);
    │                     ---- Is not compatible with: 'bool'
    │                     ^^^^ Invalid type annotation
    │

error: 

    ┌── tests/move_check/typing/derefrence_invalid.move:3:19 ───
    │
  3 │     struct S { f: u64, x: X }
    │                   --- The type: 'u64'
    ·
 16 │         (*&mut s_mut.f: (bool, u64));
    │                         ----------- Is not compatible with: '(bool, u64)'
    │                         ^^^^^^^^^^^ Invalid type annotation
    │

error: 

    ┌── tests/move_check/typing/derefrence_invalid.move:3:19 ───
    │
  3 │     struct S { f: u64, x: X }
    │                   --- The type: 'u64'
    ·
 17 │         (s_mut.f: &u64);
    │                   ---- Is not compatible with: '&u64'
    │                   ^^^^ Invalid type annotation
    │

error: 

    ┌── tests/move_check/typing/derefrence_invalid.move:3:27 ───
    │
  3 │     struct S { f: u64, x: X }
    │                           - The type: '0x8675309::M::X'
    ·
 18 │         (*&s_mut.x: (X, S));
    │                     ------ Is not compatible with: '(0x8675309::M::X, 0x8675309::M::S)'
    │                     ^^^^^^ Invalid type annotation
    │

error: 

    ┌── tests/move_check/typing/derefrence_invalid.move:3:27 ───
    │
  3 │     struct S { f: u64, x: X }
    │                           - The type: '0x8675309::M::X'
    ·
 19 │         (*&mut s_mut.x: ());
    │                         -- Is not compatible with: '()'
    │                         ^^ Invalid type annotation
    │

